Fixed the horizontal scroll on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@
 }
 
 /* Nav-header start */
+
+/* Navbar color change when scrolling */
 .navbar-light {
     background: transparent;
 }
@@ -21,6 +23,9 @@
     transition: 500ms ease;
     background: black;
 }
+/* --- */
+
+
 .navbar-nav a {
     font-family: poppins;
     font-size: 20px;
@@ -57,7 +62,7 @@
 }
 
 .nav-item {
-    padding: .6rem 1rem;
+    padding: .6rem 0 .6rem 1rem;
 }
 
 /* .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
@@ -114,75 +119,40 @@
     .navbar-nav.ml-auto {
         background: rgba(0, 0, 0);
     }
-    .navbar-toggler {
-        padding: 1px 5px;
-        font-size: 18px;
-        line-height: 0.3;
-        background: #fff;
-        margin: 0 60px 0 0;
-    }
 
-    .image-text {
-        display: flex;
-        flex-direction: column;
-        top: 65%;
-        left: 60%;
-        width: 100%;
-        text-align: center;
-        /* margin: 0 !important; */
-    }
-
-    .image-text h2 {
-        font-size: 25px;
-    }
-
-    .image-text p {
-        width: 75%;
-        justify-content: center;
-        
-    }
-}
-
-@media only screen and (max-width: 989px) {
-    .navbar-nav.ml-auto {
-        background: rgba(0, 0, 0);
+    .navbar {
+        padding: 8px 0 8px 15px;
     }
     .navbar-toggler {
         padding: 1px 5px;
         font-size: 18px;
         line-height: 0.3;
         background: #fff;
-        margin: 0 60px 0 0;
+        margin: 0 30px 0 0;
     }
 
-    .image-text {
-        display: flex;
-        flex-direction: column;
-        top: 65%;
-        left: 60%;
-        width: 100%;
-        text-align: center;
-        /* margin: 0 !important; */
-    }
-
-    .image-text h2 {
-        font-size: 25px;
-    }
-
-    .image-text p {
-        width: 75%;
-        justify-content: center;
-        
-    }
-}
-
-@media only screen and (max-width: 1197px) {
     .container {
-        margin-left: 20px;
+        margin: 0;
     }
 
-    .nav-item {
-        padding: .5rem;
+    .image-text {
+        display: flex;
+        flex-direction: column;
+        left: 50%;
+        width: 100%;
+        text-align: center;
+
+    }
+    .image-text h2 {
+        font-size: 25px;
+        margin: 0 12%;
+    }
+
+    .image-text p {
+        width: 80%;
+        text-align: center;
+        margin: 0 12%;
+        
     }
 }
 /* End of nav-header */
